fix: overflow article

--- a/src/css/body/Product.css
+++ b/src/css/body/Product.css
@@ -34,6 +34,15 @@
   height: 200px;
 }
 
+.article-title {
+  height: 100px;
+}
+
+.article-desc {
+  height: 200px;
+  overflow: scroll;
+}
+
 .product-src {
   height: 30px;
 }
